--- a/publications/papers/index.html
+++ b/publications/papers/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of papers</h3>
-
+<a href="./Rule_and_Sanguinetti_2017.pdf">Rule_and_Sanguinetti_2017.pdf</a><br/><a href="./Rule_et_al_2019.pdf">Rule_et_al_2019.pdf</a><br/>
 </body>
 </html>
