--- a/publications/talks/slides/index.html
+++ b/publications/talks/slides/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of slides</h3>
-<a href="./GLM tutorial/index.html">./GLM tutorial</a><br/><a href="./siam.pdf">siam.pdf</a><br/><a href="./2014_Rule_MCN_course_presentation.pdf">2014_Rule_MCN_course_presentation.pdf</a><br/>
+<a href="./GLM tutorial/index.html">./GLM tutorial</a><br/><a href="./2014_Rule_MCN_course_presentation.pdf">2014_Rule_MCN_course_presentation.pdf</a><br/><a href="./siam.pdf">siam.pdf</a><br/>
 </body>
 </html>
