--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of michaelerule.github.io</h3>
-<a href="./publications/index.html">./publications</a><br/><a href="./old_websites/index.html">./old_websites</a><br/><a href="./README.md">README.md</a><br/><a href="./sync.sh">sync.sh</a><br/><a href="./Gemfile">Gemfile</a><br/><a href="./makeindex.py">makeindex.py</a><br/><a href="./maketree.py">maketree.py</a><br/><a href="./find_large_files.sh">find_large_files.sh</a><br/>
+<a href="./gittools/index.html">./gittools</a><br/><a href="./publications/index.html">./publications</a><br/><a href="./old_websites/index.html">./old_websites</a><br/><a href="./README.md">README.md</a><br/>
 </body>
 </html>
