added links to github projects

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of michaelerule.github.io</h3>
-<a href="./gittools/index.html">./gittools</a><br/><a href="./publications/index.html">./publications</a><br/><a href="./old_websites/index.html">./old_websites</a><br/><a href="./README.md">README.md</a><br/>
+<a href="./gittools/index.html">./gittools</a><br/><a href="./publications/index.html">./publications</a><br/><a href="./old_websites/index.html">./old_websites</a><br/><a href="./README.md">README.md</a><br/><a href="./Github_repositories.html">Github_repositories.html</a><br/>
 </body>
 </html>
