--- a/old_websites/old_github_test/cpu/diffusion/index.html
+++ b/old_websites/old_github_test/cpu/diffusion/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of diffusion</h3>
-<a href="./diffusion_style.css">diffusion_style.css</a><br/><a href="./diffusion_2D_nonlinear.html">diffusion_2D_nonlinear.html</a><br/><a href="./SIRS_cpu.html">SIRS_cpu.html</a><br/>
+<a href="./SIRS_cpu.html">SIRS_cpu.html</a><br/><a href="./diffusion_style.css">diffusion_style.css</a><br/><a href="./diffusion_2D_nonlinear.html">diffusion_2D_nonlinear.html</a><br/>
 </body>
 </html>
