add bet wave video

--- a/publications/index.html
+++ b/publications/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of publications</h3>
-<a href="./notes/index.html">./notes</a><br/><a href="./posters/index.html">./posters</a><br/><a href="./talks/index.html">./talks</a><br/><a href="./papers/index.html">./papers</a><br/>
+<a href="./notes/index.html">./notes</a><br/><a href="./posters/index.html">./posters</a><br/><a href="./videos/index.html">./videos</a><br/><a href="./talks/index.html">./talks</a><br/><a href="./papers/index.html">./papers</a><br/>
 </body>
 </html>
