--- a/publications/notes/index.html
+++ b/publications/notes/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of notes</h3>
-<a href="./2009-2016 thesis notes/index.html">./2009-2016 thesis notes</a><br/><a href="./ipython_notebooks/index.html">./ipython_notebooks</a><br/>
+<a href="./thesis notes/index.html">./thesis notes</a><br/><a href="./ipython_notebooks/index.html">./ipython_notebooks</a><br/>
 </body>
 </html>
