--- a/publications/notes/thesis notes/index.html
+++ b/publications/notes/thesis notes/index.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-<h3>Index of 2009-2016 thesis notes</h3>
+<h3>Index of thesis notes</h3>
 <a href="./20130116_mrule_note_redundancy_stable_decoding.pdf">20130116_mrule_note_redundancy_stable_decoding.pdf</a><br/>
 </body>
 </html>
