--- a/publications/notes/thesis notes/index.html
+++ b/publications/notes/thesis notes/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of thesis notes</h3>
-<a href="./20130116_mrule_note_redundancy_stable_decoding.pdf">20130116_mrule_note_redundancy_stable_decoding.pdf</a><br/>
+<a href="./20130116_mrule_note_redundancy_stable_decoding.pdf">20130116_mrule_note_redundancy_stable_decoding.pdf</a><br/><a href="./20110727_mrule_online_Fourier_transforms_as_filter_banks_and_state_space_models.pdf">20110727_mrule_online_Fourier_transforms_as_filter_banks_and_state_space_models.pdf</a><br/>
 </body>
 </html>
