--- a/publications/videos/index.html
+++ b/publications/videos/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of videos</h3>
-<a href="./videoout_250Hz_20fps_KGPreTrial6.avi">videoout_250Hz_20fps_KGPreTrial6.avi</a><br/>
+<a href="./heitmann/index.html">./heitmann</a><br/><a href="./betawaves/index.html">./betawaves</a><br/><a href="./retinasim/index.html">./retinasim</a><br/>
 </body>
 </html>
