--- a/publications/notes/index.html
+++ b/publications/notes/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of notes</h3>
-<a href="./edinburgh notes/index.html">./edinburgh notes</a><br/><a href="./cambridge notes/index.html">./cambridge notes</a><br/><a href="./coursenotes/index.html">./coursenotes</a><br/><a href="./thesis notes/index.html">./thesis notes</a><br/><a href="./useful notes from other people/index.html">./useful notes from other people</a><br/><a href="./ipython_notebooks/index.html">./ipython_notebooks</a><br/>
+<a href="./course notes/index.html">./course notes</a><br/><a href="./edinburgh notes/index.html">./edinburgh notes</a><br/><a href="./cambridge notes/index.html">./cambridge notes</a><br/><a href="./thesis notes/index.html">./thesis notes</a><br/><a href="./useful notes from other people/index.html">./useful notes from other people</a><br/><a href="./ipython_notebooks/index.html">./ipython_notebooks</a><br/>
 </body>
 </html>
