--- a/publications/notes/edinburgh notes/index.html
+++ b/publications/notes/edinburgh notes/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of edinburgh notes</h3>
-<a href="./20180720_mrule_neural_field_likelihood_approximations.pdf">20180720_mrule_neural_field_likelihood_approximations.pdf</a><br/>
+<a href="./20180720_mrule_neural_field_likelihood_approximations.pdf">20180720_mrule_neural_field_likelihood_approximations.pdf</a><br/><a href="./20170204_mrule_system_size_expansion_qar_and_moment_closure.pdf">20170204_mrule_system_size_expansion_qar_and_moment_closure.pdf</a><br/>
 </body>
 </html>
