--- a/publications/notes/cambridge notes/index.html
+++ b/publications/notes/cambridge notes/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of cambridge notes</h3>
-<a href="./20200512_mrule_GP_for_grid_cells.html">20200512_mrule_GP_for_grid_cells.html</a><br/><a href="./20200512_mrule_GP_for_grid_cells.ipynb">20200512_mrule_GP_for_grid_cells.ipynb</a><br/><a href="./20210109_mrule_GP_for_grid_cell_v8.pdf">20210109_mrule_GP_for_grid_cell_v8.pdf</a><br/>
+<a href="./20200512_mrule_GP_for_grid_cells.ipynb">20200512_mrule_GP_for_grid_cells.ipynb</a><br/><a href="./20200512_mrule_GP_for_grid_cells.pdf">20200512_mrule_GP_for_grid_cells.pdf</a><br/><a href="./20200512_mrule_gp_for_grid_cells.html">20200512_mrule_gp_for_grid_cells.html</a><br/>
 </body>
 </html>
