--- a/publications/media/2021_sorrell_rule_oleary/sorrell_rule_2021_thumbnails.html
+++ b/publications/media/2021_sorrell_rule_oleary/sorrell_rule_2021_thumbnails.html
@@ -1,5 +1,7 @@
 
 <html><head></head><body>
+(thumbnails; click to download .svg or high resolution version)
+<br/>
 
 <a href="./electrode.svg"><img src="./thumbnails/electrode_thumbnail.png" title="electrode.svg"/></a>
 <a href="./eeg_cap.svg"><img src="./thumbnails/eeg_cap_thumbnail.png" title="eeg_cap.svg"/></a>
