--- a/publications/papers/oleary/index.html
+++ b/publications/papers/oleary/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of oleary</h3>
-<a href="./2021_sorrell_rule_oleary_brain_machine_interfaces.pdf">2021_sorrell_rule_oleary_brain_machine_interfaces.pdf</a><br/>
+<a href="./rule_et_al_2020_stable_task_information.pdf">rule_et_al_2020_stable_task_information.pdf</a><br/><a href="./2021_sorrell_rule_oleary_brain_machine_interfaces.pdf">2021_sorrell_rule_oleary_brain_machine_interfaces.pdf</a><br/><a href="./rule_oleary_harvey_2019_causes_and_consequences_of_representational_drift.pdf">rule_oleary_harvey_2019_causes_and_consequences_of_representational_drift.pdf</a><br/>
 </body>
 </html>
