--- a/random/20210206 maze/index.html
+++ b/random/20210206 maze/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of 20210206 maze</h3>
-<a href="./map.pdf">map.pdf</a><br/><a href="./map.svg">map.svg</a><br/>
+<a href="./map.pdf">map.pdf</a><br/><a href="./map.svg">map.svg</a><br/><a href="./map.png">map.png</a><br/>
 </body>
 </html>
