--- a/old_websites/old_github_test/cpu/index.html
+++ b/old_websites/old_github_test/cpu/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of cpu</h3>
-<a href="./old/index.html">./old</a><br/><a href="./diffusion/index.html">./diffusion</a><br/><a href="./wilson_cowan/index.html">./wilson_cowan</a><br/><a href="./one dimension/index.html">./one dimension</a><br/>
+<a href="./one dimension/index.html">./one dimension</a><br/><a href="./diffusion/index.html">./diffusion</a><br/><a href="./wilson_cowan/index.html">./wilson_cowan</a><br/><a href="./old/index.html">./old</a><br/>
 </body>
 </html>
