--- a/old_websites/old_github_test/lib/gpu/index.html
+++ b/old_websites/old_github_test/lib/gpu/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of gpu</h3>
-<a href="./parameters.js">parameters.js</a><br/><a href="./gpgpu.js">gpgpu.js</a><br/><a href="./gpugaussian.js">gpugaussian.js</a><br/><a href="./gpurand.js">gpurand.js</a><br/>
+<a href="./gpurand.js">gpurand.js</a><br/><a href="./gpugaussian.js">gpugaussian.js</a><br/><a href="./parameters.js">parameters.js</a><br/><a href="./gpgpu.js">gpgpu.js</a><br/>
 </body>
 </html>
