--- a/publications/notes/course notes/cambridge/3f1/index.html
+++ b/publications/notes/course notes/cambridge/3f1/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of 3f1</h3>
-<a href="./20200201_Visualizing_z_transforms.ipynb">20200201_Visualizing_z_transforms.ipynb</a><br/><a href="./20200201_mrule_visualizing_z_transforms.pdf">20200201_mrule_visualizing_z_transforms.pdf</a><br/><a href="./20191118_mrule_evaluating_z-domain_transfer_functions_on_the_unit_circle_for_bode_and_nyquist_plots.pdf">20191118_mrule_evaluating_z-domain_transfer_functions_on_the_unit_circle_for_bode_and_nyquist_plots.pdf</a><br/><a href="./plotting_helper.py">plotting_helper.py</a><br/>
+<a href="./plotting_helper.py">plotting_helper.py</a><br/><a href="./20191118_mrule_evaluating_z-domain_transfer_functions_on_the_unit_circle_for_bode_and_nyquist_plots.pdf">20191118_mrule_evaluating_z-domain_transfer_functions_on_the_unit_circle_for_bode_and_nyquist_plots.pdf</a><br/><a href="./20200201_mrule_visualizing_z_transforms.pdf">20200201_mrule_visualizing_z_transforms.pdf</a><br/><a href="./20200201_Visualizing_z_transforms.ipynb">20200201_Visualizing_z_transforms.ipynb</a><br/>
 </body>
 </html>
