--- a/publications/talks/slides/GLM tutorial/index.html
+++ b/publications/talks/slides/GLM tutorial/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of GLM tutorial</h3>
-<a href="./glm_tutorial.pdf">glm_tutorial.pdf</a><br/><a href="./glm_tutorial.tex">glm_tutorial.tex</a><br/><a href="./glm_tutorial.script.txt">glm_tutorial.script.txt</a><br/><a href="./glm_tutorial.handout.tex">glm_tutorial.handout.tex</a><br/><a href="./glm_tutorial_handout.handout.tex">glm_tutorial_handout.handout.tex</a><br/><a href="./glm_tutorial">glm_tutorial</a><br/><a href="./glm_tutorial_handout">glm_tutorial_handout</a><br/>
+<a href="./glm_tutorial.script.txt">glm_tutorial.script.txt</a><br/><a href="./glm_tutorial.pdf">glm_tutorial.pdf</a><br/><a href="./glm_tutorial">glm_tutorial</a><br/><a href="./glm_tutorial.handout.tex">glm_tutorial.handout.tex</a><br/><a href="./glm_tutorial.tex">glm_tutorial.tex</a><br/><a href="./glm_tutorial_handout">glm_tutorial_handout</a><br/><a href="./glm_tutorial_handout.handout.tex">glm_tutorial_handout.handout.tex</a><br/>
 </body>
 </html>
