--- a/thumbnails/index.html
+++ b/thumbnails/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of thumbnails</h3>
-<a href="./a3d.png">a3d.png</a><br/><a href="./mandala.png">mandala.png</a><br/><a href="./betawave.png">betawave.png</a><br/><a href="./gpgpu.png">gpgpu.png</a><br/><a href="./wc.png">wc.png</a><br/><a href="./glm.png">glm.png</a><br/>
+<a href="./betawave.png">betawave.png</a><br/><a href="./a3d.png">a3d.png</a><br/><a href="./glm.png">glm.png</a><br/><a href="./gpgpu.png">gpgpu.png</a><br/><a href="./mandala.png">mandala.png</a><br/><a href="./wc.png">wc.png</a><br/>
 </body>
 </html>
