--- a/gittools/index.html
+++ b/gittools/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of gittools</h3>
-<a href="./maketree.py">maketree.py</a><br/><a href="./makeindex.py">makeindex.py</a><br/><a href="./find_large_files.sh">find_large_files.sh</a><br/><a href="./sync.sh">sync.sh</a><br/>
+<a href="./maketree.py">maketree.py</a><br/><a href="./find_large_files.sh">find_large_files.sh</a><br/><a href="./makeindex.py">makeindex.py</a><br/><a href="./sync.sh">sync.sh</a><br/>
 </body>
 </html>
