--- a/publications/media/index.html
+++ b/publications/media/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of media</h3>
-<a href="./thesis_figures/index.html">./thesis_figures</a><br/><a href="./misc_clipart/index.html">./misc_clipart</a><br/><a href="./2021_sorrell_rule_oleary/index.html">./2021_sorrell_rule_oleary</a><br/>
+<a href="./misc_clipart/index.html">./misc_clipart</a><br/><a href="./2021_sorrell_rule_oleary/index.html">./2021_sorrell_rule_oleary</a><br/><a href="./thesis_figures/index.html">./thesis_figures</a><br/>
 </body>
 </html>
