--- a/publications/media/thesis_figures/index.html
+++ b/publications/media/thesis_figures/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of thesis_figures</h3>
-<a href="./Chapter1Figure1.svg">Chapter1Figure1.svg</a><br/><a href="./signal.png">signal.png</a><br/><a href="./Chapter1Figure1.png">Chapter1Figure1.png</a><br/><a href="./Chapter1Figure1.pdf">Chapter1Figure1.pdf</a><br/><a href="./signal.pdf">signal.pdf</a><br/><a href="./signal.svg">signal.svg</a><br/>
+<a href="./Chapter1Figure1.pdf">Chapter1Figure1.pdf</a><br/><a href="./signal.pdf">signal.pdf</a><br/><a href="./signal.svg">signal.svg</a><br/><a href="./Chapter1Figure1.svg">Chapter1Figure1.svg</a><br/><a href="./signal.png">signal.png</a><br/><a href="./Chapter1Figure1.png">Chapter1Figure1.png</a><br/>
 </body>
 </html>
