--- a/publications/talks/slides/index.html
+++ b/publications/talks/slides/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Index of slides</h3>
-<a href="./GLM tutorial/index.html">./GLM tutorial</a><br/><a href="./20120808_siam_flicker.pdf">20120808_siam_flicker.pdf</a><br/><a href="./20201105_control_seminar_self_healing_codes.pdf">20201105_control_seminar_self_healing_codes.pdf</a><br/><a href="./20190923_Loback_et_al_Capbreton_NCCD_slides.pdf">20190923_Loback_et_al_Capbreton_NCCD_slides.pdf</a><br/><a href="./20200723_BCI_unconference_slides.pdf">20200723_BCI_unconference_slides.pdf</a><br/><a href="./20180402_ANC_and_job_talk_noanimation.pdf">20180402_ANC_and_job_talk_noanimation.pdf</a><br/><a href="./20140909_Rule_MCN_course_presentation.pdf">20140909_Rule_MCN_course_presentation.pdf</a><br/>
+<a href="./20220524 Edinburgh ML job talks/index.html">./20220524 Edinburgh ML job talks</a><br/><a href="./GLM tutorial/index.html">./GLM tutorial</a><br/><a href="./20190923_Loback_et_al_Capbreton_NCCD_slides.pdf">20190923_Loback_et_al_Capbreton_NCCD_slides.pdf</a><br/><a href="./20201105_control_seminar_self_healing_codes.pdf">20201105_control_seminar_self_healing_codes.pdf</a><br/><a href="./20120808_siam_flicker.pdf">20120808_siam_flicker.pdf</a><br/><a href="./20200723_BCI_unconference_slides.pdf">20200723_BCI_unconference_slides.pdf</a><br/><a href="./20140909_Rule_MCN_course_presentation.pdf">20140909_Rule_MCN_course_presentation.pdf</a><br/><a href="./20180402_ANC_and_job_talk_noanimation.pdf">20180402_ANC_and_job_talk_noanimation.pdf</a><br/>
 </body>
 </html>
