--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
 </head>
 <body>
 <h3>Index of michaelerule.github.io</h3>
-<a href="./publications/index.html">./publications</a><br/><a href="./gittools/index.html">./gittools</a><br/><a href="./thumbnails/index.html">./thumbnails</a><br/><a href="./random/index.html">./random</a><br/><a href="./old_websites/index.html">./old_websites</a><br/><a href="./Github_repositories.html">Github_repositories.html</a><br/><a href="./README.md">README.md</a><br/>
+<a href="./publications/index.html">./publications</a>
+<br/>
+<a href="./gittools/index.html">./gittools</a>
+<br/>
+<a href="./thumbnails/index.html">./thumbnails</a>
+<br/>
+<a href="./random/index.html">./random</a>
+<br/>
+<a href="./old_websites/index.html">./old_websites</a>
+<br/>
+<a href="./github_repositories.html">github repositories</a>
+<br/>
+<a href="./README.md">README.md</a>
+<br/>
+
 </body>
 </html>
